apps/sample-app/base/service-stable.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app
  labels:
    app: sample-app
    service: sample-app
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: sample-app
