apps/sample-app/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app-vsvc
spec:
  hosts:
    - "sample-app-gateway.127.0.0.1.nip.io"
  gateways:
    - sample-app-gateway
  http:
    - name: primary
      route:
        - destination:
            host: sample-app
          weight: 100
        - destination:
            host: sample-app-canary
          weight: 0
